# ruby-agent

./: .gitignore  README.md  llm
doc/: agent-01.md  agent-02.md  agent-03.md  agent-04.md  api.md  llm.md
examples/: jitgrep.rb  tmux.rb
examples/jitgrep/: .cmd  Makefile  jitgrep
examples/jitgrep/src/: jit.cpp  jit.h  main.cpp  regex.h  regex_parser.cpp
examples/tmux/: .cmd  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  cmake_install.cmake  log.txt  main.cpp  mytmux
examples/tmux/src/: Tab.cpp  Tab.hpp  main.cpp
